@@ -17,12 +17,11 @@ if test $# -eq 0 || test -n "$tmp"; then
     echo "           [--version]"
     echo "Options:"
     echo "  --help | -h   : show this help message"
-    echo 
+    echo
     echo "  --prefix      : show the installation prefix (cf. autoconf)"
     echo "  --includedir  : show the path to the directory containing the Rivet headers"
     echo "  --libdir      : show the path to the directory containing the Rivet libraries"
     echo "  --datadir     : show the path to the directory containing Rivet data"
-    echo "  --rgdatadir   : show the path to the directory containing RivetGun data"
     echo
     echo "  --pythonpath  : show the path(s) to the directory containing Rivet Python modules"
     echo "  --cppflags    : returns a Rivet '-I' string for insertion into CPPFLAGS"
@@ -46,9 +45,6 @@ test -n "$tmp" && OUT="$OUT @libdir@"
 
 tmp=$( echo "$*" | egrep -- '--\<datadir\>')
 test -n "$tmp" && OUT="$OUT @datadir@/@PACKAGE_TARNAME@"
-
-tmp=$( echo "$*" | egrep -- '--\<rgdatadir\>')
-test -n "$tmp" && OUT="$OUT @datadir@/RivetGun"
 
 tmp=$( echo "$*" | egrep -- '--\<pythonpath\>')
 test -n "$tmp" && {
