@@ -1,5 +1,9 @@
 2010-06-23  Andy Buckley  <andy@insectnation.org>
 
+	* Adding relative scale ratio plot flag to compare-histos
+
+	* Extended command completion to rivet-config, compare-histos, and make-plots.
+
 	* Providing protected log messaging macros,
 	MSG_{TRACE,DEBUG,INFO,WARNING,ERROR} cf. Athena.
 
